--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h3>Website Downloader</h3>
+  <h3>Snakes Website Cloner</h3>
   <button id="download">Download Page</button>
   <script src="popup.js"></script>
 </body>
