--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-    }
-    button {
-      padding: 10px;
-      font-size: 14px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snakes n' Networks - Website Cloner</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h3>Snakes Website Cloner</h3>
-  <button id="download">Download Page</button>
-  <script src="popup.js"></script>
+    <div class="container">
+        <img src="logo.png" alt="Snakes n' Networks Logo" class="logo">
+        <h1>Snakes Website Cloner</h1>
+        <button class="clone-button">Start Cloning</button>
+        <script src="popup.js"></script>
+    </div>
 </body>
 </html>
